# cmake_template

./: README.md
template/: README.md
template/basic_grammar/: CMakeLists.txt
template/minimum_c/: CMakeLists.txt
template/minimum_cpp/: CMakeLists.txt
template/modular_organization/: CMakeLists.txt
template/simple/: CMakeLists.txt
